--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "JY",
   "license": "ISC",
@@ -12,5 +13,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mongoose": "^6.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
